\name{NEWS}
\title{News for \R Package \pkg{Pigenegene}}

\section{Changes in version 1.19.8 (2021-05-25)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item The C50 plot function seems to have different behavior when
      the number of Labels is 2. Habil reverse the color to fix the
      resulting bug.
    }
  }
}

\section{Changes in version 1.17.10 (2021-02-02)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item When building the Ubuntu, Neda got an error message on
      building the vignette "argument is of length zero". It was due to
      her old version of BiocStyle, 2.14.4. To solve this issue,
      Pigengene now depends BiocStyle Version >= 2.19.1. Even 2.18.1
      might be enough with R 4.0.3.
    }
  }
}

\section{Changes in version 1.15.20 (2020-09-28)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item When automatically computing the \code{threshold} in the
      \code{consensus} function, we now do not allow it to be more than
      1 to be compatible with bnlearn 4.6.1.
    }
  }
}

\section{Changes in version 1.15.16 (2020-09-22)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The modules can now be determined in the
      \code{module.heatmap} function using the new \code{mes} argument.
    }
  }
}

\section{Changes in version 1.15.14 (2020-09-08)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{combine.networks} now really removes the big TOM file
      when \code{doRemoveTOM=TRUE}.
    }
  }
}

\section{Changes in version 1.15.12 (2020-06-22)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{DiseaseColors} argument in the
      \code{plot.pigengene} function can now be set automatically.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{pheatmap.type} now works fine even when the number of
      samples in a condition is only 1.
    }
  }
}

\section{Changes in version 1.13.44 (2020-04-21)}{